fixed safari gap-desease

--- a/style.scss
+++ b/style.scss
@@ -306,7 +306,8 @@ a {
     font-weight: 600;
     display: flex;
     align-items: center;
-    gap: 15px;
+    // gap: 15px;
+
     user-select: none;
 
     &.active {
@@ -443,11 +444,11 @@ a {
     }
 
     &.shown &__item {
-      gap: 15px;
       justify-content: center;
     }
 
     &.shown &__item li {
+      margin-left: 15px;
       width: auto;
     }
 
@@ -501,6 +502,10 @@ a {
     grid-row: 1 / span 2;
     grid-column: 1 / 1;
     transform: translate(0);
+
+    &__item li {
+      margin-left: 15px;
+    }
 
     &__trigger {
       display: none;
